[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/soldier/BODY0.png" type="Texture" id=1]
[ext_resource path="res://src/objects/Gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/player/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/soldier/HEAD1.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/health-bar/bar_green.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/health-bar/bar_red.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/soldier/arms_shooting.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.5915

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 72, 91 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 72, 0, 72, 91 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 72, 91 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 216, 0, 72, 91 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 72, 91 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 360, 0, 72, 91 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "shooting",
"speed": 60.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="BodyShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Body" type="Position2D" parent="."]

[node name="Arms" type="AnimatedSprite" parent="Body"]
position = Vector2( 28, 0 )
rotation = 1.5708
frames = SubResource( 8 )
animation = "shooting"
frame = 5
playing = true

[node name="BodySprite" type="Sprite" parent="Body"]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="HeadSprite" type="Sprite" parent="Body"]
position = Vector2( 4, 0 )
texture = ExtResource( 4 )

[node name="GunPivot" type="Position2D" parent="."]

[node name="Gun" parent="GunPivot" instance=ExtResource( 2 )]
position = Vector2( 32, 0 )

[node name="HealthBar" type="Position2D" parent="."]
position = Vector2( 64, -32 )

[node name="RedBar" type="Sprite" parent="HealthBar"]
position = Vector2( -94.5062, -9.33218 )
texture = ExtResource( 6 )
centered = false

[node name="GreenBar" type="Sprite" parent="HealthBar"]
position = Vector2( -94.5062, -9.33218 )
texture = ExtResource( 5 )
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
smoothing_enabled = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 524288

[node name="BodyShape2" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 1 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
